  to have your name and email address listed here unless you explicitly
  note otherwise.  Whether your name & email is actually listed depends
  on how extensive the change.  (If it's a minor code, document change,
  or spelling correction your name will probably not be listed.)

****************************   Release 3.1 ******************************
Modules 3.1.6
Not yet released
	Contributors:
		Scott Gaskins		<sgaskins@us.ibm.com>
	 	Leo Butler		<lbutler@brocade.com>)
		Philip Kearns		<Philip.Kearns@tellabs.com>
	* Fixed problem with module load when the full path
	  is given (patch due to Scott Gaskins).
	* Added tests for the above problem.
	* Added the Modules-Paper in PDF format (thanks to Philip Kearns
	  and Leo Butler for raising the issue).
	* Modified probetcl to avoid using the -c option
	  (patch due to Philip Kearns).
	* Modified probetcl to use tclsh first then tcl
	* Added TCL_VERSION to configure and use it in the Makefile
	  to use the -ltcl@TCL_VERSION@ library.
	
Modules 3.1.5
Sat Aug 18 07:32:48 PDT 2001		R.K. Owen (rk@owen.sj.ca.us)
	Contributors:
		Eric Stanley		<barnabas@knicknack.net>
	* Fixed up cmdPath to remove individual items from a path
	  (patch due to Eric Stanley).
	* Fixed problem of failed "module loads" in a modulefile
	  (patch due to Eric Stanley).
Modules 3.1.4
Fri Aug  3 12:45:55 PDT 2001		R.K. Owen (rk@owen.sj.ca.us)
	* Some preliminary steps to a rpm file.
	* Added bz2 files to distribution mix.
	* Fixed "module swap" to put the substituted module in the
	  same path location as the old.  Also added a number of tests
	  for this feature.
	  (Bug was pointed out by Leo Butler <lbutler@brocade.com>)
	* Added tests for the "is-loaded" modulefile command introduced
	  back in 3.0.8-rko.
	* Fixed up some documents.
Modules 3.1.3
Wed Jul 11 14:30:53 PDT 2001		R.K. Owen (rk@owen.sj.ca.us)
	* Added module-cvs modulefile for easy CVS/ftp access to the
	  modules CVS repository.