@@ -85,3 +85,8 @@ nnn(18):ERROR:102: Tcl command execution failed: 3.1.5
 nnn(18):ERROR:102: Tcl command execution failed: 3.1.5
 nnn(18):ERROR:102: Tcl command execution failed: 3.1.5
 
+REDHAT 7.2
+----------
+If you have dejagnu installed to run the testsuite
+and it complains about not finding config.guess, do the following:
+	cd /usr/share/dejagnu; ln -s ../automake/config.guess .
