@@ -14,7 +14,7 @@ export TCLTKROOT
 		--with-skel-path=/etc/skel \
 		--with-split-size=960 \
 		--x-includes=/usr/include/X11 \
-		--x-libraries=/usr/X11/lib \
+		--x-libraries=/usr/X11R6/lib \
 		--with-tcl-include=$TCLTKROOT/include \
 		--with-tcl-libraries=$TCLTKROOT/lib
 
