@@ -1,0 +1,31 @@
+#%Module1.0
+
+##############################################################################
+#   Modules Revision 3.0
+#   Providing a flexible user environment
+#
+#   File:		break/%M%
+#   Revision:		%I%
+#   First Edition:	2002/02/03
+#   Last Mod.:		%U%, %G%
+#
+#   Authors:		R.K.Owen <rk@owen.sj.ca.us>
+#
+#   Description:	Testuite modulefile
+#   Command:
+#   Sub-Command:	setenv
+#
+#   Invocation:		load @M@/foo
+#   Result:	%R{
+#			setenv	_LMFILES_ 	${_LMFILES_}:@M@/@V@
+#			setenv	LOADEDMODULES	${LOADEDMODULES}:@P@/@M@/@V@
+#			setenv	testsuite1	yes
+#		}R%
+#   Comment:	%C{
+#			This modulefile is used for checking whether the
+#			TCL "break" mechanism is working.
+#		}C%
+#			
+##############################################################################
+
+setenv testsuite1 "yes"
