@@ -1,0 +1,105 @@
+##############################################################################
+#   Modules Revision 3.0
+#   Providing a flexible user environment
+#
+#   File:		modules.50-cmds/%M%
+#   Revision:		%I%
+#   First Edition:	2001/11/05
+#   Last Mod.:		%U%, %G%
+#
+#   Authors:		R.K. Owen, <rk@owen.sj.ca.us>
+#
+#   Description:	Testuite testsequence
+#   Command:		load
+#   Modulefiles:	break/1.0,
+#   			break/2.0,
+#   			break/3.0,
+#   Sub-Command:
+#
+#   Comment:	%C{
+#			Tries the Tcl "break" to skip loading a module,
+#			but not affecting the other loaded modules.
+#		}C%
+#
+##############################################################################
+
+set mod1 "break/1.0"
+set mod2 "break/2.0"
+set mod3 "break/3.0"
+
+set mod1p "$env(MODULEPATH)/$mod1"
+set mod2p "$env(MODULEPATH)/$mod2"
+set mod3p "$env(MODULEPATH)/$mod3"
+
+#
+# set up an empty environment
+#
+set module ""
+set modulefile ""
+set env(_LMFILES_) "$modulefile"
+set env(LOADEDMODULES) "$module"
+
+#
+#  load
+#  For the different shells ...
+#
+set module "$mod1:$mod3"
+set modulefile "$mod1p:$mod3p"
+
+set lmf_sh "_LMFILES_='$modulefile';export _LMFILES_;"
+set lm_sh "LOADEDMODULES='$module';export LOADEDMODULES;"
+set ts_sh1 "testsuite1='yes';export testsuite1;"
+set ts_sh3 "testsuite3='yes';export testsuite3;"
+
+set lmf_csh "setenv _LMFILES_ '$modulefile';"
+set lm_csh "setenv LOADEDMODULES '$module';"
+set ts_csh1 "setenv testsuite1 'yes';"
+set ts_csh3 "setenv testsuite3 'yes';"
+
+set lmf_perl "\$ENV{'_LMFILES_'} = '$modulefile';"
+set lm_perl "\$ENV{'LOADEDMODULES'} = '$module';"
+set ts_perl1 "\$ENV{'testsuite1'} = 'yes';"
+set ts_perl3 "\$ENV{'testsuite3'} = 'yes';"
+
+#
+#  The tests
+#
+test_cmd "sh" "load $mod1 $mod2 $mod3" "$ts_sh3$lmf_sh$lm_sh$ts_sh1"
+test_cmd "ksh" "load $mod1 $mod2 $mod3" "$ts_sh3$lmf_sh$lm_sh$ts_sh1"
+test_cmd "zsh" "load $mod1 $mod2 $mod3" "$ts_sh3$lmf_sh$lm_sh$ts_sh1"
+test_cmd "csh" "load $mod1 $mod2 $mod3" "$ts_csh3$lmf_csh$lm_csh$ts_csh1"
+test_cmd "tcsh" "load $mod1 $mod2 $mod3" "$ts_csh3$lmf_csh$lm_csh$ts_csh1"
+test_cmd "perl" "load $mod1 $mod2 $mod3" "$ts_perl3$lmf_perl$lm_perl$ts_perl1"
+
+#
+#  Cleanup
+#
+
+unset env(_LMFILES_)
+unset env(LOADEDMODULES)
+
+unset lm_sh
+unset lmf_sh
+unset ts_sh1
+unset ts_sh3
+
+unset lm_csh
+unset lmf_csh
+unset ts_csh1
+unset ts_csh3
+
+unset lm_perl
+unset lmf_perl
+unset ts_perl1
+unset ts_perl3
+
+unset modulefile
+unset module
+
+unset mod1
+unset mod2
+unset mod3
+unset mod1p
+unset mod2p
+unset mod3p
+
