@@ -7,11 +7,18 @@
 
 ****************************   Release 3.1 ******************************
 Modules 3.1.6
-Not yet released
+Thu Jan  3 20:56:16 PST 2002		R.K. Owen (rk@owen.sj.ca.us)
 	Contributors:
 		Scott Gaskins		<sgaskins@us.ibm.com>
 	 	Leo Butler		<lbutler@brocade.com>)
 		Philip Kearns		<Philip.Kearns@tellabs.com>
+		Andy Bruce		<abruce@infocruiser.com>
+	* A 'break' in a modulefile will cause the modulefile to
+	  not be added to $LOADEDMODULES, but will be considered
+	  a successful execution to not affect other modulefiles
+	  being loaded concurrently (Patch due to Scott Gaskins).
+	* Tests and docs added for the above.
+	* Added CYGWIN/Windows specific code (due to Andy Bruce)
 	* Fixed problem with module load when the full path
 	  is given (patch due to Scott Gaskins).
 	* Added tests for the above problem.
